--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@skeletonlabs/skeleton": "^1.12.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"prettier": "^2.8.0",
