--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.0.2",
 		"@playwright/test": "^1.28.1",
 		"@skeletonlabs/skeleton": "^1.12.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.14",
+		"faker": "^6.6.6",
+		"faker-js": "^1.0.0",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
