--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
 		"smui-theme": "^7.0.0-beta.14",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-dnd-action": "^0.9.28",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -35,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@neodrag/svelte": "^2.0.3",
 		"axios": "^1.4.0",
 		"svelte-materialify": "^0.3.11"
 	}
