--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,18 @@ services:
     ports:
     - "3000:3000"
     restart: always
+
+  pong:
+    build: ./pong
+    container_name: pong-service-container
+    image: "pong_img"
+    volumes:
+    -  ./pong/src:/pong/src
+    expose:
+      - "5000"
+    ports:
+      - "5000:5000"
+    networks:
+      - default
+    restart: "always"
+
