--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
 	"dependencies": {
 		"@neodrag/svelte": "^2.0.3",
 		"axios": "^1.4.0",
+		"socket.io-client": "^4.7.2",
 		"svelte-materialify": "^0.3.11"
 	}
 }
