Moved chat back into the pong module. Alo created a Route for the Arena and Mathes

--- a/pong/Dockerfile
+++ b/pong/Dockerfile
@@ -1,13 +1,15 @@
 FROM node:lts-alpine
 
-WORKDIR /pong
+WORKDIR /backend
 #COPY ./tools/package*.json ./ TODO REBUILD PACKAGE-LOCK
 COPY package.json ./
 
 RUN npm install
 RUN npm -g update
+RUN npm install @nestjs/typeorm typeorm pg
+RUN npm install -g typescript
 
-COPY . /pong
+COPY . /backend
 
 RUN npm run build
 ENTRYPOINT [ "npm", "run", "start:debug" ]
