--- a/pong/package.json
+++ b/pong/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -24,9 +24,11 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "nest": "^0.1.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "ts-matrix": "^1.2.2"
+    "ts-matrix": "^1.2.2",
+    "pg": "latest"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -39,7 +41,8 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-loader": "^9.4.3",
