--- a/pong/package.json
+++ b/pong/package.json
@@ -21,6 +21,7 @@
     "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.0.0",
+    "@nestjs/schedule": "latest",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
