--- a/pong/Dockerfile
+++ b/pong/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 
 WORKDIR /usr/src/backend
 
-COPY package.json tsconfig.json .prettierrc .
+COPY package.json tsconfig.json .prettierrc ./
 
 RUN npm update
 RUN npm install
