--- a/pong/package.json
+++ b/pong/package.json
@@ -23,6 +23,9 @@
     "@nestjs/websockets": "^10.0.0",
     "@nestjs/schedule": "latest",
     "@nestjs/passport": "latest",
+    "@types/passport-42": "latest",
+    "passport": "latest",
+    "passport-42": "latest",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
