Just updated package to hod config in it, main.ts uses environment, mostly

--- a/pong/package.json
+++ b/pong/package.json
@@ -22,7 +22,9 @@
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.0.0",
     "@nestjs/schedule": "latest",
+    "@nestjs/config": "latest",
     "@nestjs/passport": "latest",
+    "@types/config": "latest",
     "@types/passport-42": "latest",
     "passport": "latest",
     "passport-42": "latest",
