Trying to understand how to proceed :v

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   db:
     image: mysql:5.7
     container_name: db
+    platform: linux/x86_64
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: transcendence
