--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,34 +2,26 @@ version: '3.5'
 
 services:
   front:
-    container_name: front-service-container
+    container_name: front-container
     build: ./frontend
     # volumes:
     # - ./frontend/src/routes:/usr/src/app/src/routes
     ports:
-    - "4200:4200"
+      - '${FRONTEND_PORT}:${FRONTEND_PORT}'
     restart: always
 
-    #  back:
-    #    container_name: backend-service-container
-    #    build: ./backend
-    #    volumes:
-    #    -  ./backend:/usr/src/node-app
-    #    ports:
-    #    - "3000:3000"
-    #    restart: always
-    #
-  pong:
-    build: ./pong
-    container_name: pong-service-container
-    image: "pong_img"
+  back:
+    build:
+      context: ./
+      dockerfile: ./backend/Dockerfile
+    container_name: back-container
+    image: 'backend_img'
     volumes:
-    -  ./pong/src:/usr/src/backend/src
+      - ./backend/src:/usr/src/backend/src
     expose:
-      - "5000"
+      - '${BACKEND_PORT}'
     ports:
-      - "5000:5000"
+      - '${BACKEND_PORT}:${BACKEND_PORT}'
     networks:
       - default
-    restart: "always"
-
+    restart: always
