--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-PORT=
-CLIENT_ID=
-CLIENT_SECRET=
-ACCESS_TOKEN_URI=
-AUTHORIZATION_URI=
-REDIRECT_URI=
-FRONT_BASE_URI=
-INTRA_URL=
+BASENAME='http://localhost'
+FRONTEND_PORT='4200'
+BACKEND_PORT='5000'
+
+CLIENT_ID=<YOUR INTRA ID GOES HERE>
+CLIENT_SECRET=<YOUR SECRET GOES HERE>
+REDIRECT_URI='http://localhost:5000/auth/callback'
