--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "compilerOptions": {
+    "compilerOptions": {
+      "types": [
+        "node"
+      ],
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
