--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ BASENAME='http://localhost'
 FRONTEND_PORT='4200'
 BACKEND_PORT='5000'
 
+JWT_SECRET=<YOUR SECRET GOES HERE>
 CLIENT_ID=<YOUR INTRA ID GOES HERE>
 CLIENT_SECRET=<YOUR SECRET GOES HERE>
 REDIRECT_URI='http://localhost:5000/auth/callback'
