--- a/frontend/new/package.json
+++ b/frontend/new/package.json
@@ -42,6 +42,7 @@
   "type": "module",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2"
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "axios": "^1.6.2"
   }
 }
