Envitonment now in the same structure in container and in project. (Is this ok?))

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,8 @@ FROM node:alpine
 WORKDIR /usr/src/backend
 
 #RUN npm install --global yarn
-COPY .env backend/package.json backend/tsconfig.json backend/.prettierrc ./
+COPY  .env ../
+COPY backend/package.json backend/tsconfig.json backend/.prettierrc ./
 
 RUN yarn install
 
