--- a/backend/package.json
+++ b/backend/package.json
@@ -21,36 +21,37 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/websockets": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/config": "latest",
-    "@nestjs/passport": "latest",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "latest",
-    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/passport": "latest",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/throttler": "latest",
+    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.0.0",
+    "express-session": "latest",
     "mysql2": "^3.6.3",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17",
     "passport": "latest",
     "passport-42": "latest",
     "passport-jwt": "latest",
-    "express-session": "latest"
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
     "@types/config": "latest",
-    "@types/passport-42": "latest",
-    "@types/passport-jwt": "latest",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "latest",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-42": "latest",
+    "@types/passport-jwt": "latest",
     "@types/supertest": "^2.0.12",
-    "@types/express-session": "latest",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
