Updated .env.example and moved composefile and backend out of hardcoded-values hell

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,10 @@ BACKEND_PORT='3000'
 JWT_SECRET=<YOUR SECRET GOES HERE>
 CLIENT_ID=<YOUR INTRA ID GOES HERE>
 CLIENT_SECRET=<YOUR SECRET GOES HERE>
-REDIRECT_URI='http://localhost:3000/auth/callback'
+
+DB_HOST='db'
+DB_PORT='5432'
+DB_ADMIM=<ADMIN>
+DB_PASS=<ADMIN PASS>
+
+ADMINER_PORT='8181'
