--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ FRONTEND_PORT='5173'
 BACKEND_PORT='3000'
 
 JWT_SECRET=<YOUR SECRET GOES HERE>
+JWT_REFRESH_SECRET=<YOUR SECRET GOES HERE>
 CLIENT_ID=<YOUR INTRA ID GOES HERE>
 CLIENT_SECRET=<YOUR SECRET GOES HERE>
 
