fix/Misleading entry typo

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ CLIENT_SECRET=<YOUR SECRET GOES HERE>
 
 DB_HOST='db'
 DB_PORT='5432'
-DB_ADMIM=<ADMIN>
+DB_ADMIN=<ADMIN>
 DB_PASS=<ADMIN PASS>
 
 ADMINER_PORT='8181'
