feat: add docker changes and env variables

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,6 @@
 FROM node:alpine
 
-WORKDIR /usr/src/backend
+EXPOSE ${BACKEND_PORT} ${BACKEND_WEBSOCKETS_PORT}
 
-#RUN npm install --global yarn
-COPY  .env ../
-COPY backend/package.json backend/tsconfig.json backend/.prettierrc ./
-
-RUN apk update && apk add --no-cache curl
-RUN yarn install
-
-ENTRYPOINT [ "yarn", "start:dev" ]
+WORKDIR /app
+ENTRYPOINT yarn install && yarn run start:dev
