--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,25 @@ DB_ADMIN=<ADMIN>
 DB_PASS=<ADMIN PASS>
 
 ADMINER_PORT='8181'
+
+
+#################
+# Postgres environment variables
+#POSTGRES_USER=admin
+#POSTGRES_PASSWORD=1234
+#POSTGRES_DB=transcendence
+
+# Backend environment variables
+#BACKEND_PORT=3000
+#BACKEND_WEBSOCKETS_PORT=3001
+#BACKEND_BASE=http://localhost
+#JWT_SECRET=thisisasecret
+#JWT_REFRESH_SECRET=thisisanothersecret
+#CLIENT_ID=xxxxxxx
+#CLIENT_SECRET=xxxxxxxx
+
+# Frontend environment variables
+#FRONTEND_PORT=5173
+
+# Adminer environment variables
+#ADMINER_PORT=8080
