--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     container_name: adminer
     ports:
       - ${ADMINER_PORT}:8080
+    environment:
+      - ADMINER_DEFAULT_SERVER=postgres
     depends_on:
       - postgres
     networks:
