--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,8 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
     "typeorm": "^0.3.17",
-    "otplib": "latest"
+    "otplib": "latest",
+    "qrcode": "latest"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
