--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "new",
   "version": "0.0.1",
   "private": true,
-  
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -45,7 +44,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@neodrag/svelte": "^2.0.3",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "socket.io-client": "^4.7.2"
   }
 }
