front container needed to install xdg-open command, which is used to open a URL in the default web browser

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,5 +5,7 @@ EXPOSE ${FRONTEND_PORT}
 ENV PUBLIC_BACKEND_PORT=${BACKEND_PORT}
 ENV PUBLIC_BACKEND_BASE=${BACKEND_BASE}
 
+RUN apt-get update && apt-get install -y xdg-utils
+
 WORKDIR /usr/src/frontend
 ENTRYPOINT yarn install && yarn run dev --host ${HOST} --open
