--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,8 +46,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@neodrag/svelte": "^2.0.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/p5": "^1.7.4",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
+    "p5-svelte": "^3.1.2",
     "socket.io-client": "^4.7.2"
   }
 }
