--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,10 @@
 		"@nestjs/config": "latest",
 		"@nestjs/core": "^10.0.0",
 		"@nestjs/jwt": "latest",
-		"@nestjs/passport": "latest",
+		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.0.0",
 		"@nestjs/platform-socket.io": "^10.0.0",
+		"@nestjs/schedule": "^4.0.0",
 		"@nestjs/throttler": "latest",
 		"@nestjs/typeorm": "^10.0.0",
 		"@nestjs/websockets": "^10.0.0",
