--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,20 @@
-BASENAME='http://localhost'
-FRONTEND_PORT='5173'
-BACKEND_PORT='3000'
-
-JWT_SECRET=<YOUR SECRET GOES HERE>
-JWT_REFRESH_SECRET=<YOUR SECRET GOES HERE>
-CLIENT_ID=<YOUR INTRA ID GOES HERE>
-CLIENT_SECRET=<YOUR SECRET GOES HERE>
-
-DB_HOST='db'
-DB_PORT='5432'
-DB_ADMIN=<ADMIN>
-DB_PASS=<ADMIN PASS>
-
-ADMINER_PORT='8181'
-
-
-#################
 # Postgres environment variables
-#POSTGRES_USER=admin
-#POSTGRES_PASSWORD=1234
-#POSTGRES_DB=transcendence
+POSTGRES_PORT=5432
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=transcendence
 
 # Backend environment variables
-#BACKEND_PORT=3000
-#BACKEND_WEBSOCKETS_PORT=3001
-#BACKEND_BASE=http://localhost
-#JWT_SECRET=thisisasecret
-#JWT_REFRESH_SECRET=thisisanothersecret
-#CLIENT_ID=xxxxxxx
-#CLIENT_SECRET=xxxxxxxx
+BACKEND_PORT=3000
+BACKEND_WEBSOCKETS_PORT=3001
+BACKEND_BASE=http://localhost
+JWT_SECRET=
+JWT_REFRESH_SECRET=
+CLIENT_ID=
+CLIENT_SECRET=
 
 # Frontend environment variables
-#FRONTEND_PORT=5173
+FRONTEND_PORT=5000
 
 # Adminer environment variables
-#ADMINER_PORT=8080
+ADMINER_PORT=8080
