--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - ${POSTGRES_PORT}
     networks:
       - pong-network
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     deploy:
       resources:
         limits:
