--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
 		"@nestjs/throttler": "latest",
 		"@nestjs/typeorm": "^10.0.0",
 		"@nestjs/websockets": "^10.0.0",
+		"@types/cookie-parser": "^1.4.6",
+		"cookie-parser": "^1.4.6",
 		"passport": "latest",
 		"passport-42": "latest",
 		"passport-jwt": "latest",
@@ -38,6 +40,7 @@
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.8.1",
 		"socket.io": "^4.7.2",
+		"svelte-routing": "^2.10.0",
 		"typeorm": "^0.3.17"
 	},
 	"devDependencies": {
