--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,6 +19,10 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "include": [
+      "src/**/*.ts",
+      "src/chat/**/*.ts"
+    ]
   }
 }
