Fixed login and added a volume to postgres and a sql script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - ${POSTGRES_PORT}
     networks:
       - pong-network
+    volumes:
+      - ./db.sql:/docker-entrypoint-initdb.d/db.sql
+      - ./postgres-data:/var/lib/postgresql/data
     restart: always
 
   backend:
