feat: add changes.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,4 @@ FROM node:alpine
 EXPOSE ${BACKEND_PORT} ${BACKEND_WEBSOCKETS_PORT}
 
 WORKDIR /app
-ENTRYPOINT yarn install && yarn run start:dev
+ENTRYPOINT yarn install && yarn run build && yarn run start
