--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,4 +6,4 @@ ENV PUBLIC_BACKEND_PORT=${BACKEND_PORT}
 ENV PUBLIC_BACKEND_BASE=${BACKEND_BASE}
 
 WORKDIR /usr/src/frontend
-ENTRYPOINT yarn install && yarn run build && yarn run preview --host ${HOST} --port ${FRONTEND_PORT}
+ENTRYPOINT yarn install && yarn run build && yarn run dev --host ${HOST} --port ${FRONTEND_PORT}
