--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 # Postgres environment variables
-POSTGRES_PORT=5432
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=1234
 POSTGRES_DB=transcendence
+POSTGRES_PORT=5432
 
 # Backend environment variables
 BACKEND_PORT=3000
-BACKEND_WEBSOCKETS_PORT=3001
 BACKEND_BASE=http://localhost
 JWT_SECRET=
 JWT_REFRESH_SECRET=
@@ -14,7 +13,7 @@ CLIENT_ID=
 CLIENT_SECRET=
 
 # Frontend environment variables
-FRONTEND_PORT=5000
+FRONTEND_PORT=5173
 
 # Adminer environment variables
 ADMINER_PORT=8080
