--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
 		"@nestjs/typeorm": "^10.0.0",
 		"@nestjs/websockets": "^10.0.0",
 		"@types/cookie-parser": "^1.4.6",
+		"body-parser": "^1.20.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"cookie-parser": "^1.4.6",
